# PincoSimulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FILE_Description.md  LICENSE  Makefile  README.md  Readme  cmake_install.cmake  converti.m
MatlabUtils/: LiebSample.m  PlotCrooks.m  TWMCSample.m  UniformString.m  functionsignatures.json
MatlabUtils/@BaseSimRunner/: BaseSimRunner.m  CreateTimeDependentPulse.m  Params2CellText.m  Pulse2CellText.m
MatlabUtils/@LiebReader/: AverageExtractData.m  Lieb1PartCoeffs.m  LiebReader.m
MatlabUtils/@LiebRunner/: LiebRunner.m
MatlabUtils/@SimReader/: AverageMergeChunks.m  CheckLoadAnalyzedData.m  ConvertInterleavedToComplex.m  EstimateAnalizedFolder.m  FixEditDate.m  IsDataUpToDate.m  MergeChunksData.m  QuantitiesMergeChunks.m  ReadAllChunk.m  ReadAllChunkNames.m  ReadAnalizeStoreData.m  ReadDatFiles.m  ReadIniFile.m  ReadSimulationRegister.m  ReadTrajectoriesInRegister.m  SimReader.m
MatlabUtils/@SimRunner/: CreateFolder.m  CreateTimeDependentPulse.m  Params2CellText.m  SaveTextFileByLine.m  SimRunner.m
MatlabUtils/@TWMCReader/: AverageExtractData.m  ComputeCrooks.m  TWMCReader.m
MatlabUtils/@TWMCRunner/: TWMCRunner.m
MatlabUtils/@ThermoReader/: AverageExtractData.m  CheckBinningConvergence.m  ComputeCrooks.m  EstimateCrooksBinning.m  ThermoReader.m
MatlabUtils/@ThermoRunner/: ThermoRunner.m
SampleData/: test-lieb.ini  test-sim.ini
Support Files/: test-sim.ini
TWMC++/: ChunkFileSet.cpp  ChunkFileSet.hpp  ChunkRegister.cpp  ChunkRegister.hpp  CustomTypes.h  DataSaver.cpp  DataSaver.hpp  EigenUtils.cpp  EigenUtils.hpp  FilesystemUtils.cpp  FilesystemUtils.hpp  FsUtils.cpp  IniPrefReader.cpp  IniPrefReader.hpp  Makefile  Manager.cpp  Manager.hpp  ManagerFactory.cpp  ManagerFactory.hpp  NoisyMatrix.cpp  NoisyMatrix.hpp  Settings.cpp  Settings.hpp  SimData.cpp  SimData.hpp  Simulation.cpp  Simulation.hpp  TWMCAppendThreadManager.cpp  TWMCAppendThreadManager.hpp  TWMCResults.cpp  TWMCSimData.cpp  TWMCSimData.hpp  TWMCSimulation.cpp  TWMCSimulation.hpp  TWMCThreadManager.cpp  TWMCThreadManager.hpp  TWMCTypes.h  TWMC_evolve.cpp  TWMC_evolve.hpp  TWMC_structures.h  (+17 more)
TWMC++.xcodeproj/: project.pbxproj
TWMC++.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TWMC++/Factories/: TaskResultsFactory.cpp
TWMC++/FileFormats/: DataStore.cpp  DataStore.hpp  PincoFormatDataStore.cpp  PincoFormatDataStore.hpp
ThermoTWMC/: TWMCThermoResults.hpp  TWMCThermoSimulation.cpp  TWMCThermoSimulation.hpp  TWMCThermoThreadManager.cpp  TWMCThermoThreadManager.hpp
cmake-modules/: FindCereal.cmake  FindEigen3.cmake  FindFFTW.cmake
cmake-modules/gpu/: VexCLTargets.cmake
src/: main.cpp
src/Base/: CustomTypes.h  DataSaver.cpp  DataSaver.hpp  Manager.cpp  Manager.hpp  NoisyMatrix.cpp  NoisyMatrix.hpp  ResultsSaver.cpp  ResultsSaver.hpp  SettingStrings.hpp  Settings.cpp  Settings.hpp  Solver.cpp  Solver.hpp  SolverGPU.cpp  SolverGPU.hpp  Task.cpp  Task.hpp  TaskData.hpp  TaskProcessor.cpp  TaskProcessor.hpp  TaskResults.cpp  TaskResults.hpp  TaskResultsGeneric.hpp
src/Base/Exceptions/: FileNotExistsException.hpp  NoEligibleSolverException.hpp  NotImplementedException.hpp
src/Base/Factories/: ManagerFactory.cpp  TaskResultsFactory.hpp
src/Base/FileFormats/: ChunkFileSet.cpp  ChunkFileSet.hpp  ChunkRegister.cpp  ChunkRegister.hpp  DataStore.cpp  DataStore.hpp  FILE_Description.md  PincoFormatDataStore.cpp  PincoFormatDataStore.hpp
src/Base/Interfaces/: IResultConsumer.cpp  IResultConsumer.hpp  ITaskConsumer.cpp  ITaskConsumer.hpp
src/Base/MPIManager/: MPINodeManager.cpp  MPINodeManager.hpp  MPIPincoTags.hpp  MPIProcessor.cpp  MPIProcessor.hpp  ResultQueueSerial.cpp
src/Base/MPITaskProcessor/: BoostSerializationArchiveFormats.hpp  MPINodeManager.cpp  MPINodeManager.hpp  MPIProcessor.cpp  MPIProcessor.hpp  SerializationArchiveFormats.hpp
src/Base/ManagerUtils/: JuliaManager.cpp  JuliaManager.h  MergeManager.cpp  MergeManager.hpp  ResortManager.cpp  ResortManager.hpp
src/Base/Modules/: ProgressReporter.cpp  ProgressReporter.hpp  ResultsSaver.cpp  ResultsSaver.hpp
src/Base/ResultsHelpers/: HeterogeneousContainer.hpp
src/Base/Serialization/: BaseSerializators.cpp  SerializationArchiveFormats.hpp
src/Base/ThreadedTaskProcessor/: ThreadedTaskProcessor.cpp  ThreadedTaskProcessor.hpp  WorkerThread.cpp  WorkerThread.hpp
src/Base/Utils/: EigenUtils.cpp  EigenUtils.hpp  FsUtils.cpp  FsUtils.hpp  Misc.hpp  StringFormatter.hpp  VectorUtils.hpp
src/Libraries/: FilesystemLibrary.h  PreAllocator.hpp  TStaticFactory.h  concurrentqueue.h  eigen_boost_serialization.hpp  eigen_cereal_serialization.hpp
src/Libraries/dp14/: factory.h  memoize.h
src/Libraries/metacommon/: common.h
src/TWLieb/: TWLiebSimData.cpp  TWLiebSimData.hpp  TWLiebTypes.hpp  TWMCLiebResults.cpp  TWMCLiebResults.hpp  TWMCLiebSimulation.cpp  TWMCLiebSimulation.hpp  TWMCLiebThreadManager.cpp  TWMCLiebThreadManager.hpp
src/TWMC/: TWMCManager.cpp  TWMCManager.hpp  TWMCResults.cpp  TWMCResults.hpp  TWMCSerializators.cpp  TWMCSerializators.hpp  TWMCSimData.cpp  TWMCSimData.hpp  TWMCSystemData.cpp  TWMCSystemData.hpp  TWMCTaskData.cpp  TWMCTaskData.hpp  TWMCThreadManager.cpp  TWMCThreadManager.hpp  TWMCTypes.h  TrajectorySaver.cpp  TrajectorySaver.hpp
src/TWMC/AppendTWMC/: TWMCAppendThreadManager.cpp  TWMCAppendThreadManager.hpp
src/TWMC/SimpleTWMC/: TWMCResults.cpp  TWMCResults.hpp  TWMCSimData.cpp  TWMCSimData.hpp  TWMCSimulation.cpp  TWMCSimulation.hpp  TWMCThreadManager.cpp  TWMCThreadManager.hpp
src/TWMC/Solvers/: TWMCBaseGPU.cpp  TWMCBaseGPU.hpp  TWMCBaseSolver.cpp  TWMCBaseSolver.hpp  TWMCLiebGPUSolver.cpp  TWMCLiebGPUSolver.hpp  TWMCLiebSolver.cpp  TWMCLiebSolver.hpp  TWMCThermoSolver.cpp  TWMCThermoSolver.hpp
src/TWMC/ThermoTWMC/: TWMCThermoResults.cpp  TWMCThermoResults.hpp  TWMCThermoSimulation.cpp  TWMCThermoSimulation.hpp  TWMCThermoThreadManager.cpp  TWMCThermoThreadManager.hpp
src/ThreadedManager/: ThreadManager.cpp  ThreadManager.hpp  ThreadedTaskProcessor.cpp  ThreadedTaskProcessor.hpp  WorkerThread.cpp  WorkerThread.hpp
(+20 files in other folders)
